Only link was left without markdown whatsoever

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,1 +1,1 @@
-Live demo of this project can be seen [here](https://bull-ipaulito.c9users.io/)
+Live demo of this project can be seen https://bull-ipaulito.c9users.io/
